--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
           <li>Контакты сообщества для желающих присоединиться: <a href="http://opendata.by/about/">opendata.by/about</a></li>
           </ul>
           <p>Редактор приложения Алексей Медвецкий, am@opendata.by.</p>
+          <div id="tibo"><a href="http://www.tc.by/exhibitions/tibo/ip2016/"><img src="http://www.tc.by/i/photo/ip.jpg"></a></div>
     </div>
     
   </article>
