--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/styles.css">
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
+if (document.location.hostname != "localhost") {
     (function (d, w, c) {
         (w[c] = w[c] || []).push(function() {
             try {
@@ -29,6 +30,9 @@
             d.addEventListener("DOMContentLoaded", f, false);
         } else { f(); }
     })(document, window, "yandex_metrika_callbacks");
+} else {
+	console.log("You're on localhost.");
+}
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/30492712" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
@@ -66,6 +70,7 @@
         <li>Компьютерные Вести, <a href="http://www.kv.by/content/335971-posmotret-gde-vveden-zapret-na-prodazhu-alkogolya-teper-mozhno-v-onlaine">http://www.kv.by/content/335971...</a></li>
         <li>Marketing.By, <a href="http://marketing.by/novosti-rynka/vyshlo-prilozhenie-alkogolnoe-obozrenie-respubliki-belarus/">http://marketing.by/novosti-rynka/vyshlo-prilozhenie-alkogolnoe-obozrenie-respubliki-belarus/</a></li>
         <li>Sputnik Беларусь, <a href="http://sputnik.by/technology/20150605/1015580135.html">http://sputnik.by/technology/20150605/1015580135.html</a></li>
+        <li>Еврорадио, <a href="http://euroradio.fm/zakon-ne-zabaranyae-chamu-u-babruysku-u-dzen-cvyarozasci-gandlyuyuc-pivam">http://euroradio.fm/zakon-ne-zabaranyae-chamu-u-babruysku-u-dzen-cvyarozasci-gandlyuyuc-pivam</a></li>
         </ul>
         
         <p><b>Прочее:</b></p>
