Добавить 2 источника данных.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ if (document.location.hostname != "localhost") {
         
         <p><b>Прочее:</b></p>
         <ul>
-          <li>Источник данных: Национальный правовой Интернет-портал Республики Беларусь, <a href="http://pravo.by">pravo.by</a></li>
+          <li>Источники данных: <a href="http://belstat.gov.by">Белстат</a>, <a href="http://mvd.gov.by">МВД</a>, Национальный правовой Интернет-портал Республики Беларусь, <a href="http://pravo.by">pravo.by</a></li>
           <li>Другие проекты сообщества "Открытые данные для Беларуси": <a href="http://opendata.by/projects/">opendata.by/projects</a></li>
           <li>Контакты сообщества для желающих присоединиться: <a href="http://opendata.by/about/">opendata.by/about</a></li>
           </ul>
