Исправить отображение районов, подсказки. Навести порядок.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,6 @@ if (document.location.hostname != "localhost") {
 	здорового образа жизни, помогает грамотно спланировать досуг, а также
 	открывает интересные особенности алкогольной политики местных властей -
 	например, в сроках, на которые вводится ограничение на продажу алкоголя.</p>
-        <div id="main_slider"></div>
-    <div id="main_map_items"></div>
     <div id="list"></div>
     <div id="main_map"></div>
     <div id="preview_tooltip" class="hidden">
@@ -79,9 +77,6 @@ if (document.location.hostname != "localhost") {
 		<p id="rajon"></p><p id="period"></p>
 	</div>
   <div id= "impressum" class="text">
-      <p>Сделано в dataШколе сообщества
-	  "<a href="http://opendata.by">Открытые данные для Беларуси</a>".
-	  Расширенная испытательная версия.</p>
     <p><b>Примечания:</b></p>
         <ul>
         <li>"Обычный режим продажи" алкогольных и/ или слабоалкогольных напитков
@@ -102,14 +97,18 @@ if (document.location.hostname != "localhost") {
           <li>Источники данных: <a href="http://belstat.gov.by">Белстат</a>, <a href="http://mvd.gov.by">МВД</a>, Национальный правовой Интернет-портал Республики Беларусь, <a href="http://pravo.by">pravo.by</a></li>
           <li>Другие проекты сообщества "Открытые данные для Беларуси": <a href="http://opendata.by/projects/">opendata.by/projects</a></li>
           <li>Контакты сообщества для желающих присоединиться: <a href="http://opendata.by/about/">opendata.by/about</a></li>
+		  <li>Редактор проекта Алексей Медвецкий, am@opendata.by</li>
           </ul>
     </div>
   </article>
-    </div>
   <footer>
+      <p>Сделано в dataШколе сообщества
+	  "<a href="http://opendata.by">Открытые данные для Беларуси</a>".
+	  </p>
   <script src="js/d3.v4.min.js" charset="utf-8"></script>
   <script src="js/script.js"></script>
     </footer>
+    </div>
 </body>
 </html>
 
