Поправить формат даты. Добавить логотип by-sa.

--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@ if (document.location.hostname != "localhost") {
     </div>
   </article>
   <footer>
-      <p>Сделано в dataШколе сообщества
-	  "<a href="http://opendata.by">Открытые данные для Беларуси</a>".
-	  </p>
+        <div id="cc">
+			<a href="http://creativecommons.org/licenses/by-sa/4.0/deed.be">
+			<img src="img/bysa.png">
+			</a>
+			<p>2015 &ndash; 2018 dataШкола сообщества "<a href="http://opendata.by">Открытые данные для Беларуси</a>".</p></div>
   <script src="js/d3.v4.min.js" charset="utf-8"></script>
   <script src="js/script.js"></script>
     </footer>
