Добавить сообщение о заморозке проекта.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ if (document.location.hostname != "localhost") {
 	здорового образа жизни, помогает грамотно спланировать досуг, а также
 	открывает интересные особенности алкогольной политики местных властей -
 	например, в сроках, на которые вводится ограничение на продажу алкоголя.</p>
+	<p><em>Проект заморожен на данных 2018 года. Пожелания о разморозке направляйте редактору проекта.</em></p>
     <div id="list"></div>
     <div id="main_map"></div>
     <div id="preview_tooltip" class="hidden">
